	- La colonne action est supprimée dans la liste des commandes livrées (en gestion de commande)
	- Sur la page de transfert avec la visulisation des transferts d'un article, l'utilisation des filtres perdait l'article sélectionné.

Améliorations:
	- Ajout du nom du stock dans les blocs
	- Ajout du nom du stock dans les commandes

Sécurités:
	- /
-------------------------------------------------
Version: 1.3.0 Stable
Date:    10.11.2024
-------------------------------------------------
Correction de bogues:
	- le split de commande ne fonctionnait pas avec les mml.

Améliorations:
	- Ajout d'une option pour qu'un article ne soit pas commandable
	- Ajout du système de gestion des plaques
	- Changement ordre affichage du bloc des emprunteurs

Sécurités:
	- /

-------------------------------------------------
Version: 1.2.0 Stable
Date:    27.10.2024
-------------------------------------------------
Correction de bogues:
	- Le total d'un article était faux si il y était en libre service.
    - Le transfert d'un article en libre service n'ajoute pas de quantité au stock.

Améliorations:
	- Nouveau système pour les transferts (formulaire)
    - Ajout du système de stock minimum

Sécurités:
	- /
-------------------------------------------------
Version: 1.1.1 Stable
Date:    25.09.2024
-------------------------------------------------
Correction de bogues:
	- Bogue calcul de prix moyen

Améliorations:
    - Affichage des liens rapide de la fiche article uniquement si l'article n'est pas en libre service
    - Ajout de l'affichage du prix moyen

Sécurités:
	- /

-------------------------------------------------
Version: 1.1.0 Stable
Date:    16.09.2024
-------------------------------------------------
Correction de bogues:
	- Il n'était pas possible de supprimer définitivement un article du stock

Améliorations:
	- Ajout d'un bouton pour les prêts (directement depuis la fiche article)

Sécurités:
	- /

-------------------------------------------------
Version: 1.0.1 Stable