@@ -20,7 +20,7 @@
 						<td class="txtleft">
 						<div class="list-group">
 						<{foreach from=$information key=item_id item=item_info}>
-							<a href="<{$xoops_url}>/modules/xmarticle/viewarticle.php?category_id=<{$item_info.cid}>&article_id=<{$item_info.id}>" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center" target="_blank">
+							<a href="<{$xoops_url}>/modules/xmarticle/viewarticle.php?article_id=<{$item_info.id}>" class="list-group-item list-group-item-action d-flex justify-content-between align-items-center" target="_blank">
 							<{$item_info.name}>
 							<{if $item_info.type|default:'' != ''}>
 								<span class="badge badge-pill badge-info"><{$item_info.type}></span>
